--- a/estilos/accidentemodal.css
+++ b/estilos/accidentemodal.css
@@ -1,60 +1,36 @@
-.modal {
-    display: none; 
-    position: fixed;
-    z-index: 1000;
-    padding-top: 50px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.6);
-}
-
-.contenidoModal {
-    position: relative;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    margin: auto;
-    background: rgb(22, 24, 28);
-    padding: 20px;
-    border-radius: 10px;
-    width: 30%;
-    color: white;
-    box-shadow: 0 0 10px rgba(255,255,255,0.3);
-}
-
-.contenidoModal input[type="text"]{
-    background-color: rgb(22, 24, 28);
-    border: 2px solid rgba(164, 163, 182, 0.088);
-    box-shadow: 5px 5px 0px 0px rgba(164, 163, 182, 0.088);
-    border-radius: 5px;
-    color: white;
-    height: 35px;
-    width: 300px;
-    margin: 12px 0px 12px 0px;
-    display: block;
-}
-
-.contenidoModal h2{
-    padding: 5px 10px;
-}
-
-.formularioCrear{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.userModal {
+.addModalAccident {
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     padding: 0 0 7px 0;
-    margin: 15px 0 15px 0;
+    margin: 12px 0 12px 0;
 }
 
-.userModal label{
+input[type=date]{
+    background-color: rgb(22, 24, 28);
+    border: 2px solid rgba(164, 163, 182, 0.088);
+    box-shadow: 5px 5px 0px 0px rgba(164, 163, 182, 0.088);
+    border-radius: 5px;
+    color: transparent;
+    height: 35px;
+    width: 300px;
+}
+
+input[type=file]{
+    background-color: rgb(22, 24, 28);
+    border: 2px solid rgba(164, 163, 182, 0.088);
+    box-shadow: 5px 5px 0px 0px rgba(164, 163, 182, 0.088);
+    border-radius: 5px;
+    height: 100px;
+    width: 350px;
+    align-content: center;
+}
+
+input[type=date]:focus{
+    color: white;
+}
+
+.addModalAccident label{
     position: absolute;
     top: 15px;
     left: 10px;
@@ -63,19 +39,7 @@
     pointer-events: none;
 }
 
-.userNewInput{
-    padding: 0px 10px;
-}
-
-.userNewInput:focus{
-    border: 2px solid white;
-}
-
-.userNewInput:hover{
-    border: 2px solid white;
-}
-
-.userModal input:focus ~ label{
+.addModalAccident input:focus ~ label{
     top: -10px;
     left: 5px;
     font-size: 12px;
@@ -84,7 +48,16 @@
     padding: 0 5px;
 }
 
-.userModal input:valid ~ label{
+.addModalAccident input:valid ~ label{
+    top: -10px;
+    left: 5px;
+    font-size: 12px;
+    color: white;
+    background-color: rgb(22, 24, 28);
+    padding: 0 5px;
+}
+
+input[type=date]:valid{
     top: -10px;
     left: 5px;
     font-size: 12px;
@@ -128,15 +101,16 @@
     transform: scale(0.95);
 }
 
-.CrearNew{
+.saveAccident{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px;
+    grid-column: span 2;
 }
 
-#btnCreateNew{
+#btnSave{
     text-align: center;
     color: black;
     border-radius: 13px;
@@ -144,14 +118,22 @@
     border: 2px solid #a4a3b616;
     background-color: white;
     height: 30px;
-    width: 275px;
+    width: 300px;
 }
 
-#btnCreateNew:hover{
+#btnSave:hover{
     background-color: rgba(255, 255, 255, 0.858);
     cursor: pointer;
 }
 
-#btnCreateNew:active{
+#btnSave:active{
     transform: scale(0.95);
+}
+
+.formularioGrid {
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columnas */
+    width: 90%; /* evita que sobresalga */
+    margin: 0 auto; /* centrar */
 }
