--- a/estilos/modalStyle.css
+++ b/estilos/modalStyle.css
@@ -275,3 +275,67 @@ input[type=date]:valid{
 }
 
 /* FIn del modal Update*/
+/* Inicio del modal Delete  */
+
+.modalDelete {
+    display: none; 
+    position: fixed;
+    z-index: 1000;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+}
+
+#closeModalDelete{
+    color: white;
+    background-color: rgb(22, 24, 28);
+    box-shadow: 0 0 0 0;
+    border: 2px solid rgb(22, 24, 28);
+    float: right;
+    user-select: none;
+    font-size: 25px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+}
+#closeModalDelete:hover{
+    background-color: rgba(128, 128, 128, 0.83);
+    cursor: pointer;
+}
+#closeModalDelete:active{
+    background-color: rgba(128, 128, 128, 0.83);
+    transform: scale(0.95);
+}
+.btnDelete{
+    text-align: center;
+    color: white;
+    border-radius: 13px;
+    box-shadow: 0 0 0 0;
+    border: 2px solid rgb(220, 53, 69);
+    background-color: rgb(220, 53, 69);
+    height: 30px;
+    width: 100px;
+}
+.btnDelete:hover{
+    background-color: rgb(200, 35, 51);
+    border: 2px solid rgb(200, 35, 51);
+    cursor: pointer;
+}
+.btnDelete:active{
+    transform: scale(0.95);
+}
+.modal-content-delete {
+    background-color: #fefefe;
+    margin: 10% auto; /* Centrar el modal verticalmente (ajusta si es necesario) */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Opcional: ajusta el ancho */
+    max-width: 400px;
+    border-radius: 8px;
+    position: relative;
+    text-align: center;
+}
+/* Fin del modal Delete  */
